# AdventOfCode-2023

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp
day10/: main.cpp
day11/: main.cpp
day12/: main.cpp
day13/: main.cpp
day15/: main.cpp
day16/: main.cpp
day19/: lib.cpp  lib.h  main.cpp
scripts/: sync.sh
